--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Browser to show my javascript results</h1>
 </body>
-<script src="./chaiCalculator/chai.js"></script>
-<!-- <script src="./bodaFareCalculator/fare.js"></script>
-<script src="./mobileMoneyEstimator/fee.js"></script> -->
+<!-- <script src="./chaiCalculator/chai.js"></script> -->
+<script src="./bodaFareCalculator/fare.js"></script>
+<!-- <script src="./mobileMoneyEstimator/fee.js"></script> --> 
 </html>
